--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -1,47 +1,47 @@
 <html>
   <head>
     <title>Login</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    <link rel="stylesheet"
-	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-<link rel="stylesheet"
-	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
-<script
-	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-	<script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-  </head>
-  <body>
-  <form action="/afterSignIn" method="post" class="afterSignIn">
-    <!-- This panel is for login -->
+   <link rel='stylesheet' href='/stylesheets/style.css' />  
+    <script	src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+     <script src="angularjs/signin.js"></script> 
     
+    <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  </head>
+  
+  
+  <body ng-app="myApp" ng-controller="signinCtrl" class="container">
+  
     <div class="panel panel-primary">
-      <!-- Default panel contents -->
+      
         <div class="panel-heading">Login</div>
         <div class="panel-body">
-           <form class="form-horizontal" role="form">
+          
 		               <div class="form-group  usernameDiv">
 		                  <label class="inputUsername" class="col-sm-2 control-label pull-left">Enter your Username</label>
 		                  <div class="col-sm-10">
-		                      <input type="text" class="form-control" name="inputUsername" id="inputUsername" placeholder="username">
+		                      <input type="text" ng-model="username" class="form-control" name="inputUsername" id="inputUsername" placeholder="username">
 		                  </div>
 		               </div>
 	                  <div class="form-group  usernameDiv">
 	                    <label for="inputPassword">Password</label>
 	                    <div class="col-sm-10">
-	                      <input type="password" class="form-control" name="inputPassword" id="inputPassword" placeholder="Password">
+	                      <input type="password" ng-model="password" class="form-control" name="inputPassword" id="inputPassword" placeholder="Password">
 	                    </div>
 	                  </div>
 	                  
 	                  <div class="form-group ">
 	                    <div class="pull-left signIn">
-	                      <button type="submit" class="btn btn-primary">Sign in</button>
+	                      <button class="btn btn-primary" ng-click="signin()">Sign In</button>
 	                    </div>
 	                  </div>
-              </form>
+              
         </div>
 	</div>
- </form>	
+	
  </body>
  
 </html>
