--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -11,26 +11,68 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>  
   
 </head>
 
 
 <body ng-app="myApp" ng-controller="cart" class="container-fluid" ng-init="load();">
-	
-	<div class="col-lg-12 well">
-		<h1>Your shopping cart</h1>
-		<table border="1">
-			<tr ng-repeat="x in cart_check">
-				<td>{{x.item}}</td>
-				<td>{{x.qty}}</td>
-				<td>{{x.price}}</td>
-			</tr>
-		</table>
-		<h3>Total Price : {{price}}</h3>
-	</div>
-	
-	
+
+<div class="container">
+    <div class="row">
+        <div class="col-sm-12 col-md-10 col-md-offset-1">
+            <table class="table table-hover">
+                <thead>
+                    <tr>
+                        <th>Product</th>
+                        <th>Quantity</th>
+                        <th class="text-center">Price</th>
+                        <th class="text-center">Total</th>
+                <tbody>                        
+                    </tr>
+                </thead>
+                    <tr ng-repeat="x in cart_check">
+                        <td class="col-sm-8 col-md-6">
+                        <div class="media">
+                            <a class="thumbnail pull-left" href="#"> <img class="media-object" src="http://icons.iconarchive.com/icons/custom-icon-design/flatastic-2/72/product-icon.png" style="width: 72px; height: 72px;"> </a>
+                            <div class="media-body">
+                                <h4 class="media-heading"><a href="#">{{x.item}}</a></h4>
+                                <h5 class="media-heading"> by <a href="#">Brand name</a></h5>
+                                <span>Status: </span><span class="text-success"><strong>In Stock</strong></span>
+                            </div>
+                        </div></td>
+                        <td class="col-sm-1 col-md-1" style="text-align: center">
+                        <input type="number" class="form-control" id="qty" value="{{x.qty}}">
+                        </td>
+                        <td class="col-sm-1 col-md-1 text-center"><strong>{{x.price}}</strong></td>
+                        <td class="col-sm-1 col-md-1 text-center"><strong>{{x.total}}}</strong></td>
+                        <td class="col-sm-1 col-md-1">
+                        <button type="button" class="btn btn-danger">
+                            <span class="glyphicon glyphicon-remove"></span> Remove
+                        </button></td>
+                    </tr>
+                
+                    <tr>
+                        
+                        <td><h3>Total</h3></td>
+                        <td class="text-right"><h3><strong>{{price}}</strong></h3></td>
+                    </tr>
+                    <tr>
+                        
+                        <td >
+                        <button type="button" class="btn btn-default" ng-click="home();">
+                            <span class="glyphicon glyphicon-shopping-cart"></span> Continue Shopping
+                        </button></td>
+                        <td>
+                        <button type="button" class="btn btn-success" ng-click="checkout();">
+                            Checkout <span class="glyphicon glyphicon-play"></span>
+                        </button></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
