checkout is complete

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -60,8 +60,8 @@
 		<div class="row">					
 					<div class="col-lg-4" ng-repeat="x in list" style="border:1px solid">
 						
-						<h1><a href="/item?id={{x.id}}" >{{x.item}}</a></h1>						
-						<a href="/item?id={{x.id}}"><img src="images/watch.jpg" class="img-rounded" alt="watch" width="304" height="236"></a>
+						<h1><a href="/item?id={{x.item_id}}" >{{x.item}}</a></h1>						
+						<a href="/item?id={{x.item_id}}"><img src="images/watch.jpg" class="img-rounded" alt="watch" width="304" height="236"></a>
 						<h2 class="text-center">Item price : {{x.price | currency}}</h2>
 										
 					</div>					
