--- a/views/item.ejs
+++ b/views/item.ejs
@@ -70,9 +70,9 @@
           
           <div class="product-rating"><i class="fa fa-star gold"></i> <i class="fa fa-star gold"></i> <i class="fa fa-star gold"></i> <i class="fa fa-star gold"></i> <i class="fa fa-star-o"></i> </div>
           <hr>
-          <div class="product-price"><input type="number" ng-model="qty"></div>
+          <div class="product-price"><input type="number" ng-model="qty" min="1" ng-maxlength="{{x.qty}}"></div>
           <div class="product-price">{{x.price | currency}}</div>
-          <div class="product-stock">In Stock</div>
+          <div class="product-stock">In Stock : {{x.qty}} units </div>
           <hr>
           <div class="btn-group cart">
             <button type="button" class="btn btn-success" ng-click="cart(x);">
