user can't see his own catalouge

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -40,7 +40,7 @@
           </ul>
         </li>
         <li><a href="#">Page 2</a></li>
-        <li><a href="#">Page 3</a></li>
+        <li><a href="/sell">Sell</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><span  class="btn" ng-click="signcheck()">{{sign}}</span></li>
