--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -16,7 +16,7 @@
 </head>
 
 </head>
-<body ng-app="myApp" ng-controller="myCtrl" class="container">
+<body ng-app="myApp" ng-controller="signupCtrl" class="container">
 	<div class="container">
     <div class="panel-group">
     <div class="panel panel-default">
@@ -26,12 +26,11 @@
 	<div class="row">
 	<div class="col-lg-5"></div>
 	<div class="col-lg-2">
-		<form method="post" action="signup_scccess">
 		<input type="text" name="firstname" ng-model="firstname" placeholder="firstname"> <br><br>
 		<input type="text" name="lastname" ng-model="lastname" placeholder="lastname"> <br><br>
 		<input type="test" name="username" ng-model="username" placeholder="username"> <br><br>
 		<input type="password" name="password" ng-model="password" placeholder="password"> <br><br>
-		<input type="submit" class="btn btn-success" ng-model="signup();">
+		<input type="submit" class="btn btn-success" ng-click="signup()">
 	</div>
 	<div class="col-lg-5"></div>
 	</div>
