user profile is live!

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -30,6 +30,8 @@
 		<input type="text" name="lastname" ng-model="lastname" placeholder="lastname"> <br><br>
 		<input type="test" name="username" ng-model="username" placeholder="username"> <br><br>
 		<input type="password" name="password" ng-model="password" placeholder="password"> <br><br>
+		<input type="number" name="contact" ng-model="contact" placeholder="contact information" required> <br><br>
+		<input type="text" name="location" ng-model="location" placeholder="Enter your location" required> <br><br>
 		<input type="submit" class="btn btn-success" ng-click="signup()">
 	</div>
 	<div class="col-lg-5"></div>
