--- a/views/home.ejs
+++ b/views/home.ejs
@@ -56,6 +56,49 @@
  </div>
 
 
+<div class="container">
+  <br>
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+      <li data-target="#myCarousel" data-slide-to="3"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+      <div class="item active">
+        <img src="images/iphone.jpg" alt="iphone" width="400" height="400">
+      </div>
+
+      <div class="item">
+        <img src="images/laptop.jpg" alt="laptop" width="400" height="400">
+      </div>
+    
+      <div class="item">
+        <img src="images/camera.jpg" alt="camera" width="400" height="400">
+      </div>
+
+      <div class="item">
+        <img src="images/ebay.png" alt="ebay" width="400" height="400">
+      </div>
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
+
+
 <div class = "page" ng-controller="cataLouge" style="margin:20px;">
 		<div class="row">					
 					<div class="col-lg-4" ng-repeat="x in list" style="border:1px solid">
