--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -28,3 +28,19 @@
 .table-user-information > tbody > tr > td {
     border-top: 0;
 }
+
+.main {
+	border:1px solid; 
+	margin-top:0px!important;
+	padding-top:10px;
+	height : 70px;
+}
+
+.container-fluid {
+	margin-top:0px!important;
+	padding-top:0px!important;
+	padding-left:0px!important;
+	padding-right:0px!important;
+}
+
+
