--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -17,7 +17,49 @@
    <link rel='stylesheet' href='/stylesheets/checkout.css' />
   
 </head>
+
+<style>
+.main {
+	border:1px solid; 
+	margin-top:0px;
+	padding-top:0px;
+}
+</style>
 <body ng-app="myApp" ng-controller="checkout" class="container-fluid" ng-init="getcart();">
+
+
+<div  class="main" class="container-fluid" >
+<nav class="navbar">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <img src="images/ebay.png" class="img-rounded" alt="ebay" width="80" height="50">
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="/home">Home</a></li>
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="/profile">{{username}}<span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="/profile">Profile</a></li>
+            <li><a href="/profile">Buy / Sell History</a></li>
+          </ul>
+        </li>
+        <li><a href="/cart">cart</a></li>
+        <li><a href="/sell">Sell</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><span  class="btn" ng-click="signcheck()">{{sign}}</span></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+</div>
+
 <div class="container wrapper">
             <div class="row cart-head">
                 <div class="container">
