--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,7 +17,7 @@
 </head>
 
 <body ng-app="myApp" ng-controller="home" class="container-fluid" style="padding:0px;">
-<div  class="main" >
+<div  class="main" style="" >
 <nav class="navbar">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -30,16 +30,15 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
+        <li class="active"><a href="/home">Home</a></li>
         <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a>
+          <a class="dropdown-toggle" data-toggle="dropdown" href="/profile">{{username}}<span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Page 1-1</a></li>
-            <li><a href="#">Page 1-2</a></li>
-            <li><a href="#">Page 1-3</a></li>
+            <li><a href="/profile">Profile</a></li>
+            <li><a href="/profile">Buy/Sell details</a></li>
           </ul>
         </li>
-        <li><a href="#">Page 2</a></li>
+        <li><a href="/cart">cart</a></li>
         <li><a href="/sell">Sell</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -52,51 +51,8 @@
 
   
 <div class="container">
-  <h1>Hi <%= username %>! Welcome to eBay homepage..</h1>
+  <h1>Hi {{username}}! Welcome to eBay homepage..</h1>
  </div>
-
-
-<div class="container">
-  <br>
-  <div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
-      <li data-target="#myCarousel" data-slide-to="3"></li>
-    </ol>
-
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
-      <div class="item active">
-        <img src="images/iphone.jpg" alt="iphone" width="400" height="400">
-      </div>
-
-      <div class="item">
-        <img src="images/laptop.jpg" alt="laptop" width="400" height="400">
-      </div>
-    
-      <div class="item">
-        <img src="images/camera.jpg" alt="camera" width="400" height="400">
-      </div>
-
-      <div class="item">
-        <img src="images/ebay.png" alt="ebay" width="400" height="400">
-      </div>
-    </div>
-
-    <!-- Left and right controls -->
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
-</div>
 
 
 <div class = "page" ng-controller="cataLouge" style="margin:20px;">
