--- a/views/sell.ejs
+++ b/views/sell.ejs
@@ -17,7 +17,61 @@
 </head>
 
 </head>
+
+<style>
+.main {
+	border:1px solid; 
+	margin-top:0px!important;
+	padding-top:10px;
+	
+}
+
+.container-fluid {
+	margin-top:0px!important;
+	padding-top:0px!important;
+	padding-left:0px!important;
+	padding-right:0px!important;
+}
+
+
+</style>
 <body ng-app="myApp" ng-controller="sell" class="container">
+
+
+<div  class="main" style="" >
+<nav class="navbar">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <img src="images/ebay.png" class="img-rounded" alt="ebay" width="80" height="50">
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="/home">Home</a></li>
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="/profile">{{username}}<span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="/profile">Profile</a></li>
+            <li><a href="/profile">Buy/Sell details</a></li>
+          </ul>
+        </li>
+        <li><a href="/cart">cart</a></li>
+        <li><a href="/sell">Sell</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><span  class="btn" ng-click="signcheck()">{{sign}}</span></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+</div>
+
+
+
 	<div class="container">
     <div class="panel-group">
     <div class="panel panel-default">
