--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -13,34 +13,40 @@
   </head>
   
   
-  <body ng-app="myApp" ng-controller="signinCtrl" class="container">
+  <body ng-app="myApp" ng-controller="signinCtrl" class="container" style="width:500px;">
+  
+  <img src="images/ebay.png" class="img-rounded" alt="ebay" width="80" height="50" >
   
     <div class="panel panel-primary">
       
-        <div class="panel-heading">Login</div>
+        <div class="panel-heading">Signin | Signup</div>
         <div class="panel-body">
           
 		               <div class="form-group  usernameDiv">
-		                  <label class="inputUsername" class="col-sm-2 control-label pull-left">Enter your Username</label>
-		                  <div class="col-sm-10">
+		                    <div class="col-sm-10">
 		                      <input type="text" ng-model="username" class="form-control" name="inputUsername" id="inputUsername" placeholder="username">
 		                  </div>
 		               </div>
 	                  <div class="form-group  usernameDiv">
-	                    <label for="inputPassword">Password</label>
 	                    <div class="col-sm-10">
 	                      <input type="password" ng-model="password" class="form-control" name="inputPassword" id="inputPassword" placeholder="Password">
 	                    </div>
 	                  </div>
-	                  
-	                  <div class="form-group ">
+	                  <br><br>
+	                  <div class="row" style="margin-top:20px;padding-top:20px;">
+	                  <div class="col-md-6">
 	                    <div class="pull-left signIn">
 	                      <button class="btn btn-primary" ng-click="signin()">Sign In</button>	                     
 	                    </div>
-	                      <div class="form-group ">
+	                   </div>
+	                   <div class="col-md-6">
+	                      <div class=" pull-right signup">
 	                    <button class="btn btn-primary" ng-click="gotosignup()">Sign Up</button>
 	                     </div>
+	                     </div>
+	                      </div>
 	                  </div>
+	                 
               
         </div>
 	</div>
